SAS-2009: imported local (unreleased) components